Fix About/News text alignment

--- a/app/styles.less
+++ b/app/styles.less
@@ -388,6 +388,12 @@ table.resources {
   }
 }
 
+table.news {
+  td {
+    vertical-align: top;
+  }
+}
+
 /* ===== Account ===== */
 
 select.date-range-picker-select {
